monkypuzzle style magic

--- a/app/views/components/_c-form.erb
+++ b/app/views/components/_c-form.erb
@@ -1,7 +1,9 @@
-
-  <a id="answer-comment-link" href="<%= action %>/comments/new">Comment on this <%= commentable.class %></a>
-  <form class="c-form" action="<%= action %>/comments" method="POST">
-    <textarea name="body" placeholder="Enter comment..."></textarea>
+<div class="c-form-container flex-column width-100">
+  <% if logged_in? %>
+    <a id="answer-comment-link" href="<%= action %>/comments/new">Comment on this <%= commentable.class %></a>
+  <% end %>
+  <form class="c-form flex-column width-100" action="<%= action %>/comments" method="POST">
+    <textarea class="width-100" name="body" placeholder="Enter comment..."></textarea>
     <input type="submit">
   </form>
-
+</div>
