--- a/app/views/components/_v-container.erb
+++ b/app/views/components/_v-container.erb
@@ -1,4 +1,4 @@
-<div class="v-container">
+<div class="v-container flex-column">
   <% if comment %>
     <%= erb :'/components/_v-form', locals: { action: "/questions/#{comment.commentable_id}/comments/#{comment.id}", votable: comment } %>
   <% elsif question %>
