--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,7 +5,7 @@
   <% end %>
 <% end %>
 
-<form action='/users' method="post">
+<form class="u-form flex-column" action='/users' method="post">
   <label>Username: </label>
   <input type="text" name="user[username]"></br>
   <label>Email: </label>
