--- a/app/views/components/_a-container.erb
+++ b/app/views/components/_a-container.erb
@@ -1,12 +1,16 @@
-<div class="a-container">
-  <%= erb :'/components/_v-container', locals: { comment: nil, answer: answer, question: nil } %>
+<div class="a-container width-100">
+  <div class="a_votes_body flex-row width-100">
+    <%= erb :'/components/_v-container', locals: { comment: nil, answer: answer, question: nil } %>
     <% if answer.bad_answer? %>
       <p class="a_body bad-answer"><%= answer.body %></p>
     <% else %>
       <p class="a_body"><%= answer.body %></p>
     <% end %>
-  <span class="a_user"><%= answer.answerer.username %></span>
-  <span class="a_timestamp"><%= long_form_date(answer.created_at) %></span>
+    </div>
+  <div class="a_answerer flex-row width-100">
+    <span class="a_user"><%= answer.answerer.username %></span>
+    <span class="a_timestamp"><%= long_form_date(answer.created_at) %></span>
+  </div>
   <% if session[:id] == answer.question.questioner.id %>
     <form class="best-answer-form" action="/questions/<%= answer.question.id %>/answers/<%= answer.id %>/bestanswer" method="POST">
       <input type="hidden" name="_method" value="PUT">
