--- a/app/views/users/form.erb
+++ b/app/views/users/form.erb
@@ -1,17 +1,21 @@
-<% if logged_in? %>
-  <p>EDIT YOUR INFORMATION</p>
-<% else %>
-  <p>LOGIN</p>
-<% end %>
+<div class="sub-container flex-column">
 
-<% if logged_in? %>
-  <form action="/users/<%= user.id %>" method="post">
-  <input type="hidden" name="_method" value="put" />
-<% else %>
-  <form action="/users/login" method="post">
-<% end %>
+  <% if logged_in? %>
+    <p>EDIT YOUR INFORMATION</p>
+  <% else %>
+    <p>LOGIN</p>
+  <% end %>
 
-<%= erb :'users/_fieldsets', locals: { user: @user } %>
+  <% if logged_in? %>
+    <form class="u-form flex-column" action="/users/<%= user.id %>" method="post">
+    <input type="hidden" name="_method" value="put" />
+  <% else %>
+    <form class="u-form flex-column" action="/users/login" method="post">
+  <% end %>
 
-  <input type="submit" value="Submit">
-</form>
+  <%= erb :'users/_fieldsets', locals: { user: @user } %>
+
+    <input type="submit" value="Submit">
+  </form>
+
+</div>
