--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,8 @@
+/** {
+  border: dashed 1px red;
+}*/
+
+
 ul {
   margin: 0;
   padding: 0; }
@@ -15,131 +20,26 @@ body {
 p {
   font-size: 1.1em;
   letter-spacing: 0.02em;
-  line-height: 1.4em; }
-
-.flex-row {
-  align-items: center;
-  display: flex;
-  justify-content: center; }
-
-.flex-column {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.font-sm {
-  font-size: 1em; }
-
-.font-md {
-  font-size: 2em; }
-
-.full-width, .main-nav-link, .main-container, .body-textarea {
-  width: 100%; }
-
-.full-height, .main-nav-ul, .main-nav-li {
-  height: 100%; }
-
-.main-nav {
-  background-color: lightgray;
-  box-shadow: 0px 2px 2px 0px grey;
-  height: 70px;
-  justify-content: space-between; }
-
-.nav-header {
-  margin-left: 20px; }
-
-.main-nav-link {
-  display: inline-block;
-  height: 100%; }
-
-.main-nav-li:hover {
-  background-color: silver; }
-
-.main-nav-li {
-  padding: 0 20px;
-  transition: background 0.1s linear; }
-
-.question-button {
-  background-color: #f4b541;
-  border-radius: 15px;
-  border: solid dimgrey 2px;
-  box-shadow: 0 2px 2px 0 darkgrey;
-  margin-right: 20px;
-  padding: 5px;
-  transition: background 0.1s linear; }
-
-.question-button:hover {
-  background-color: #f4aa42; }
-
-.sub-container {
-  margin: 20px 0;
-  max-width: 900px;
-  width: 80%; }
-
-.question-data-stats {
-  background-color: whitesmoke;
-  box-sizing: border-box;
-  display: inline-block;
-  padding: 5px;
-  text-align: center; }
-
-.home-questions-li {
-  align-items: center;
-  border-top: solid 1px silver;
-  display: flex;
-  padding: 10px 0; }
-
-.home-questions-right {
-  margin-left: 15px; }
-
-.question-link {
-  color: steelblue; }
-
-.question-link:hover {
-  color: lightsteelblue; }
-
-.questioner-buttons {
-  display: inline-block; }
-
-.answer-form {
-  align-items: flex-start; }
-
-.body-textarea {
-  height: 300px; }
-
-.pipe-separate {
-  padding: 0 20px;
-  border-right: solid 1px lightgrey; }
-
-.left {
-  left: 0; }
-
-div.answer-show {
-  display: inline-block;
-  float: left;
-}
-
-.bad-answer {
-  opacity: 0.5;
-}ul {
+  line-height: 1.4em;
   margin: 0;
-  padding: 0; }
+}
 
-ul {
-  list-style-type: none; }
+button, input {
+  color: #FFF;
+  background-color: #0095ff;
+  border-color: #07c;
+  box-shadow: inset 0 1px 0 #66bfff;
+}
 
-a {
-  color: black;
-  text-decoration: none; }
+.downvote, .upvote {
+  line-height: 0;
+  margin: 0 15px 0 0;
+}
 
-body {
-  font-family: "Roboto", sans-serif; }
+.votes {
+  margin: 0 15px 0 0;
+}
 
-p {
-  font-size: 1.1em;
-  letter-spacing: 0.02em;
-  line-height: 1.4em; }
 
 .flex-row {
   align-items: center;
@@ -152,361 +52,179 @@ p {
   flex-direction: column;
   justify-content: center; }
 
-.font-sm {
-  font-size: 1em; }
-
-.font-md {
-  font-size: 2em; }
-
-.full-width, .main-nav-link, .main-container, .body-textarea {
-  width: 100%; }
-
-.full-height, .main-nav-ul, .main-nav-li {
-  height: 100%; }
-
-.main-nav {
-  background-color: lightgray;
-  box-shadow: 0px 2px 2px 0px grey;
-  height: 70px;
-  justify-content: space-between; }
-
-.nav-header {
-  margin-left: 20px; }
-
-.main-nav-link {
-  display: inline-block;
-  height: 100%; }
-
-.main-nav-li:hover {
-  background-color: silver; }
-
-.main-nav-li {
-  padding: 0 20px;
-  transition: background 0.1s linear; }
-
-.question-button {
-  background-color: #f4b541;
-  border-radius: 15px;
-  border: solid dimgrey 2px;
-  box-shadow: 0 2px 2px 0 darkgrey;
-  margin-right: 20px;
-  padding: 5px;
-  transition: background 0.1s linear; }
-
-.question-button:hover {
-  background-color: #f4aa42; }
-
-.sub-container {
-  margin: 20px 0;
-  max-width: 900px;
-  width: 80%; }
-
-.question-data-stats {
-  background-color: whitesmoke;
-  box-sizing: border-box;
-  display: inline-block;
-  padding: 5px;
-  text-align: center; }
-
-.home-questions-li {
-  align-items: center;
-  border-top: solid 1px silver;
-  display: flex;
-  padding: 10px 0; }
-
-.home-questions-right {
-  margin-left: 15px; }
-
-.question-link {
-  color: steelblue; }
-
-.question-link:hover {
-  color: lightsteelblue; }
-
-.questioner-buttons {
-  display: inline-block; }
-
-.answer-form {
-  align-items: flex-start; }
-
-.body-textarea {
-  height: 300px; }
-
-.pipe-separate {
-  padding: 0 20px;
-  border-right: solid 1px lightgrey; }
-
-.left {
-  left: 0; }
-
-div.answer-show {
-  display: inline-block;
-  float: left;
-}
-
-.bad-answer {
-  opacity: 0.5;
-}ul {
-  margin: 0;
-  padding: 0; }
-
-ul {
-  list-style-type: none; }
-
-a {
-  color: black;
-  text-decoration: none; }
-
-body {
-  font-family: "Roboto", sans-serif; }
-
-p {
-  font-size: 1.1em;
-  letter-spacing: 0.02em;
-  line-height: 1.4em; }
-
-.flex-row {
-  align-items: center;
-  display: flex;
-  justify-content: center; }
-
-.flex-column {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.font-sm {
-  font-size: 1em; }
-
-.font-md {
-  font-size: 2em; }
-
-.full-width, .main-nav-link, .main-container, .body-textarea {
-  width: 100%; }
-
-.full-height, .main-nav-ul, .main-nav-li {
-  height: 100%; }
-
-.main-nav {
-  background-color: lightgray;
-  box-shadow: 0px 2px 2px 0px grey;
-  height: 70px;
-  justify-content: space-between; }
-
-.nav-header {
-  margin-left: 20px; }
-
-.main-nav-link {
-  display: inline-block;
-  height: 100%; }
-
-.main-nav-li:hover {
-  background-color: silver; }
-
-.main-nav-li {
-  padding: 0 20px;
-  transition: background 0.1s linear; }
-
-.question-button {
-  background-color: #f4b541;
-  border-radius: 15px;
-  border: solid dimgrey 2px;
-  box-shadow: 0 2px 2px 0 darkgrey;
-  margin-right: 20px;
-  padding: 5px;
-  transition: background 0.1s linear; }
-
-.question-button:hover {
-  background-color: #f4aa42; }
-
-.sub-container {
-  margin: 20px 0;
-  max-width: 900px;
-  width: 80%; }
-
-.question-data-stats {
-  background-color: whitesmoke;
-  box-sizing: border-box;
-  display: inline-block;
-  padding: 5px;
-  text-align: center; }
-
-.home-questions-li {
-  align-items: center;
-  border-top: solid 1px silver;
-  display: flex;
-  padding: 10px 0; }
-
-.home-questions-right {
-  margin-left: 15px; }
-
-.question-link {
-  color: steelblue; }
-
-.question-link:hover {
-  color: lightsteelblue; }
-
-.questioner-buttons {
-  display: inline-block; }
-
-.answer-form {
-  align-items: flex-start; }
-
-.body-textarea {
-  height: 300px; }
-
-.pipe-separate {
-  padding: 0 20px;
-  border-right: solid 1px lightgrey; }
-
-.left {
-  left: 0; }
-
-div.answer-show {
-  display: inline-block;
-  float: left;
-}
-
-.bad-answer {
-  opacity: 0.5;
-}ul {
-  margin: 0;
-  padding: 0; }
-
-ul {
-  list-style-type: none; }
-
-a {
-  color: black;
-  text-decoration: none; }
-
-body {
-  font-family: "Roboto", sans-serif; }
-
-p {
-  font-size: 1.1em;
-  letter-spacing: 0.02em;
-  line-height: 1.4em; }
-
-.flex-row {
-  align-items: center;
-  display: flex;
-  justify-content: center; }
-
-.flex-column {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.font-sm {
-  font-size: 1em; }
-
-.font-md {
-  font-size: 2em; }
-
-.full-width, .main-nav-link, .main-container, .body-textarea {
-  width: 100%; }
-
-.full-height, .main-nav-ul, .main-nav-li {
-  height: 100%; }
-
-.main-nav {
-  background-color: lightgray;
-  box-shadow: 0px 2px 2px 0px grey;
-  height: 70px;
-  justify-content: space-between; }
-
-.nav-header {
-  margin-left: 20px; }
-
-.main-nav-link {
-  display: inline-block;
-  height: 100%; }
-
-.main-nav-li:hover {
-  background-color: silver; }
-
-.main-nav-li {
-  padding: 0 20px;
-  transition: background 0.1s linear; }
-
-.question-button {
-  background-color: #f4b541;
-  border-radius: 15px;
-  border: solid dimgrey 2px;
-  box-shadow: 0 2px 2px 0 darkgrey;
-  margin-right: 20px;
-  padding: 5px;
-  transition: background 0.1s linear; }
-
-.question-button:hover {
-  background-color: #f4aa42; }
-
-.sub-container {
-  margin: 20px 0;
-  max-width: 900px;
-  width: 80%; }
-
-.question-data-stats {
-  background-color: whitesmoke;
-  box-sizing: border-box;
-  display: inline-block;
-  padding: 5px;
-  text-align: center; }
-
-.home-questions-li {
-  align-items: center;
-  border-top: solid 1px silver;
-  display: flex;
-  padding: 10px 0; }
-
-.home-questions-right {
-  margin-left: 15px; }
-
-.question-link {
-  color: steelblue; }
-
-.question-link:hover {
-  color: lightsteelblue; }
-
-.questioner-buttons {
-  display: inline-block; }
-
-.answer-form {
-  align-items: flex-start; }
-
-.body-textarea {
-  height: 300px; }
-
-.pipe-separate {
-  padding: 0 20px;
-  border-right: solid 1px lightgrey; }
-
-.left {
-  left: 0; }
-
-div.answer-show {
-  display: inline-block;
-  float: left;
-}
-
-.bad-answer {
-  opacity: 0.5;
-}
-
-.profile-qs {
+.width-100 {
   width: 100%;
 }
 
-.profile-cs {
-  border-top: solid 1px silver;
+.q_tags_questioner {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.q-form {
+  align-items: flex-start;
+}
+
+.q_title-form {
+  justify-content: space-between;
+}
+
+.q_body_votes {
+  justify-content: flex-start;
+}
+
+.q_votes, .q_answers {
+  background-color: lightgrey;
+  margin: 0 5px;
+  padding: 5px;
+  text-align: center;
+}
+
+.q_tags-label {
+  color: lightblue;
+}
+
+
+.tags {
+  background-color: lightblue;
+  margin-left: 5px;
+  padding: 5px;
+}
+
+.cs-container {
+  align-items: flex-start;
   width: 100%;
 }
-
-.profile-qs .cs-container {
-  display: none;
+.c-form-container {
+  align-items: flex-start;
 }
 
-/*# sourceMappingURL=application.css.map */
+.c-form {
+  align-items: flex-start;
+}
+
+.a_answerer {
+  justify-content: flex-end;
+}
+.a-form-container {
+  align-items: flex-start;
+}
+.a-form {
+  align-items: flex-start;
+}
+.u-form {
+  border: solid 1px black;
+  width: 400px;
+  padding: 20px 0;
+}
+.u-form>* {
+  margin: 10px 0;
+}
+
+.a_votes_body {
+  justify-content: flex-start;
+}
+
+/*.u-form-fieldset {
+  width: 80%;
+}
+*/
+
+/*.v-container {
+  align-items: space-around;
+}*/
+
+.font-sm {
+  font-size: 1em; }
+
+.font-md {
+  font-size: 2em; }
+
+.full-width, .main-nav-link, .main-container, .body-textarea {
+  width: 100%; }
+
+.full-height, .main-nav-ul, .main-nav-li {
+  height: 100%; }
+
+.main-nav {
+  background-color: lightgray;
+  box-shadow: 0px 2px 2px 0px grey;
+  height: 70px;
+  justify-content: space-between; }
+
+.nav-header {
+  margin-left: 20px; }
+
+.main-nav-link {
+  display: inline-block;
+  height: 100%; }
+
+.main-nav-li:hover {
+  background-color: silver; }
+
+.main-nav-li {
+  padding: 0 20px;
+  transition: background 0.1s linear; }
+
+.question-button {
+  background-color: #f4b541;
+  border-radius: 15px;
+  border: solid dimgrey 2px;
+  box-shadow: 0 2px 2px 0 darkgrey;
+  margin-right: 20px;
+  padding: 5px;
+  transition: background 0.1s linear; }
+
+.question-button:hover {
+  background-color: #f4aa42; }
+
+.sub-container {
+  margin: 20px 0;
+  max-width: 900px;
+  width: 80%; }
+
+.question-data-stats {
+  background-color: whitesmoke;
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 5px;
+  text-align: center; }
+
+.home-questions-li {
+  align-items: center;
+  border-top: solid 1px silver;
+  display: flex;
+  padding: 10px 0; }
+
+.home-questions-right {
+  margin-left: 15px; }
+
+.question-link {
+  color: steelblue; }
+
+.question-link:hover {
+  color: lightsteelblue; }
+
+.questioner-buttons {
+  display: inline-block; }
+
+.answer-form {
+  align-items: flex-start; }
+
+.body-textarea {
+  height: 300px; }
+
+.pipe-separate {
+  padding: 0 20px;
+  border-right: solid 1px lightgrey; }
+
+.left {
+  left: 0; }
+
+div.answer-show {
+  display: inline-block;
+  float: left;
+}
+
+.bad-answer {
+  opacity: 0.5;
