--- a/app/views/components/_cs-container.erb
+++ b/app/views/components/_cs-container.erb
@@ -1,4 +1,4 @@
-<div class="cs-container flex-column">
+<div class="cs-container flex-column width-100">
   <% comments.each do |comment| %>
     <%= erb :'/components/_c-container', locals: {comment: comment} %>
   <% end %>
