--- a/app/views/components/_q-container.erb
+++ b/app/views/components/_q-container.erb
@@ -12,7 +12,7 @@
     <p class="q_body"><%= question.body %></p>
   </div>
   <% end %>
-  <div class="flex-row q_tags_questioner">
+  <div class="flex-row q_tags_questioner width-100">
     <div class="q_tags">
     <% if question.tags.length > 0 %>
     <span class="q_tags-label">Tags: </span>
