--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- -->  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
-
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
@@ -32,7 +30,7 @@
     </nav>
   </header>
 
-  <div class="main-container flex-column">
+  <div class="main-container flex-column width-100">
     <%= yield %>
   </div>
 
