--- a/app/views/components/_as-container.erb
+++ b/app/views/components/_as-container.erb
@@ -1,4 +1,4 @@
-<div class="as-container flex-column width-100">
+<div class="comps-container as-container flex-column width-100">
   <% answers.each do |answer| %>
     <%= erb :'/components/_a-container', locals: {answer: answer} %>
   <% end %>
