--- a/app/views/components/_c-container.erb
+++ b/app/views/components/_c-container.erb
@@ -1,4 +1,4 @@
-<div class="c-container">
+<div class="comp-container c-container">
   <%= erb :'/components/_v-container', locals: { comment: comment, answer: nil, question: nil } %>
   <p class="c_body"><%= comment.body %></p>
   <span class="c_user"><%= comment.user.username %></span>
