--- a/app/views/components/_q-container.erb
+++ b/app/views/components/_q-container.erb
@@ -1,13 +1,13 @@
-<div class="q-container flex-column width-100">
+<div class="comp-container q-container flex-column width-100">
   <% if @home_page %>
-  <div class="q_votes_answers flex-row width-100">
-    <div class="q_votes"><span><%= question.points %> votes</span></div>
-    <div class="q_answers"><span><%= question.answers.count %> answers</span></div>
-    <h2 class="q_title width-100" style="margin-left: 10px"><a href="/questions/<%= question.id %>"><%= question.title %></a></h2>
-  </div>
+    <div class="q_votes_answers flex-row width-100">
+      <div class="q_votes"><span><%= question.points %> votes</span></div>
+      <div class="q_answers"><span><%= question.answers.count %> answers</span></div>
+      <h2 class="q_title width-100" style="margin-left: 10px"><a href="/questions/<%= question.id %>"><%= question.title %></a></h2>
+    </div>
   <% else %>
-  <h2 class="q_title width-100"><a href="/questions/<%= question.id %>"><%= question.title %></a></h2>
-  <div class="q_body_votes flex-row width-100">
+    <h3 class="q_title width-100"><a href="/questions/<%= question.id %>"><%= question.title %></a></h3>
+    <div class="q_body_votes flex-row width-100">
     <%= erb :'/components/_v-container', locals: { comment: nil, answer: nil, question: question } %>
     <p class="q_body"><%= question.body %></p>
   </div>
@@ -24,8 +24,8 @@
         <% end %>
     </div>
     <div class="q_questioner">
-      <span class="q_user"><%= question.questioner.username %></span>
-      <span class="q_timestamp"><%= long_form_date(question.created_at) %></span>
+      <span class="q_user">asked by <a href="/users/<%= question.questioner.id %>"><%= question.questioner.username %></a></span>
+      <span class="q_timestamp"> on <%= long_form_date(question.created_at) %></span>
     </div>
   <% if !@home_page %>
   </div>
