--- a/app/views/components/_qs-container.erb
+++ b/app/views/components/_qs-container.erb
@@ -1,5 +1,7 @@
-<% questions.each do |question| %>
-<li class="home-questions-li">
-  <%= erb :'/components/_q-container', locals: { question: question } %>
-</li>
-<% end %>
+<div class="comps-container qs-container">
+  <% questions.each do |question| %>
+  <li>
+    <%= erb :'/components/_q-container', locals: { question: question } %>
+  </li>
+  <% end %>
+</div>
