--- a/app/views/users/form.erb
+++ b/app/views/users/form.erb
@@ -1,9 +1,9 @@
 <div class="sub-container flex-column">
 
   <% if logged_in? %>
-    <p>EDIT YOUR INFORMATION</p>
+    <h1>Edit Uour Information</h1>
   <% else %>
-    <p>LOGIN</p>
+    <h1>Log In</h1>
   <% end %>
 
   <% if logged_in? %>
