--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,7 +6,7 @@
 /*========== I. Resets ==========*/
 /*===============================*/
 
-h1, h2, p, body, li, ul {
+h1, h2, h3, p, body, li, ul {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
@@ -29,11 +29,25 @@ p {
   letter-spacing: 0.02em;
   line-height: 1.4em;
 }
-button, input {
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+h3 {
+  font-size: 2.5em;
+  margin: 10px 0;
+}
+button {
   color: #FFF;
   background-color: #0095ff;
   border-color: #07c;
   box-shadow: inset 0 1px 0 #66bfff;
+}
+a {
+  color: steelblue;
+}
+a:hover {
+  color: lightsteelblue;
 }
 
 
@@ -109,6 +123,18 @@ button, input {
 .question-button:hover {
   background-color: #f4aa42;
 }
+.comp-container {
+  border: solid 1px lightgrey;
+  box-sizing: border-box;
+  padding: 20px;
+}
+.comps-container>* {
+  margin: 15px 0;
+}
+h3.q_title {
+  padding: 0 20px;
+  box-sizing: border-box;
+}
 
 
 /* ========== a. Component-specific ========== */
@@ -166,12 +192,6 @@ button, input {
   margin: 10px 0;
 }
 
-.home-questions-li {
-  align-items: center;
-  border-top: solid 1px silver;
-  display: flex;
-  padding: 10px 0;
-}
 .home-questions-right {
   margin-left: 15px;
 }
