--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -3,9 +3,9 @@
   <h1>Questions</h1>
 
   <div class="sort-buttons flex-row">
-    <button class="most-recent-tab">Most Recent</button>
-    <button class="highest-vote-tab">Most Upvoted</button>
-    <button class="trending-tab">Trending</button>
+    <button class="most-recent-tab submit-buttons">Most Recent</button>
+    <button class="highest-vote-tab submit-buttons">Most Upvoted</button>
+    <button class="trending-tab submit-buttons">Trending</button>
   </div>
 
   <ul class="sorted-qs by-most-recent">
