--- a/app/views/components/_v-form.erb
+++ b/app/views/components/_v-form.erb
@@ -1,7 +1,7 @@
 <form class="upvote" method="post" action='<%= action %>/vote'>
-  <button type="submit" name="submit_param" value="submit_value"></button>
+  <button class="upvote-button" type="submit" name="submit_param" value="submit_value">&#8593;</button>
 </form>
   <div class="votes" data-percentage=<%= votable.points %>><%= votable.points %></div>
 <form class="downvote" method="post" action='<%= action %>/downvote'>
-    <button type="submit" name="submit_param" value="submit_value"></button>
+    <button class="downvote-button" type="submit" name="submit_param" value="submit_value">&#8595;</button>
 </form>
