--- a/app/views/users/form.erb
+++ b/app/views/users/form.erb
@@ -15,7 +15,7 @@
 
   <%= erb :'users/_fieldsets', locals: { user: @user } %>
 
-    <input type="submit" value="Submit">
+    <input class="submit-buttons" type="submit" value="Submit">
   </form>
 
 </div>
