--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -20,7 +20,7 @@
     <label>Password: </label><br>
     <input type="password" name="user[password]">
   </div>
-    <input type="submit">
+    <input class="submit-buttons" type="submit">
   </form>
 
 </div>
