--- a/public/css/application.css
+++ b/public/css/application.css
@@ -224,6 +224,10 @@ a.submit-buttons:hover, button.submit-buttons:hover, input.submit-buttons:hover 
 .delete-answer {
   display: inline-block;
 }
+.best-answer-form {
+  display: inline-block;
+}
+
 
 
 /* Votes */
